UWEC-145: fix step item spacing.

--- a/web/themes/custom/citizen_dart/components/03-composites/paragraphs/steps/_steps.scss
+++ b/web/themes/custom/citizen_dart/components/03-composites/paragraphs/steps/_steps.scss
@@ -20,6 +20,7 @@
          }
       }
       .step-details {
+         max-width: calc(100% - 110px);
          .field-headline {
             font-family: $header;
             font-size: 2.625rem;
